--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -205,8 +205,8 @@ a:visited {
     background-color: $bcg-dark;
 
     &.active,
-    &:focus,
-    &:hover {
+    > input.field:focus,
+    > input.field:hover {
         color: $text-active;
         border-color: $bcg-darker;
         box-shadow: 0 0 4px rgba(0, 0, 0, .5);
@@ -216,6 +216,12 @@ a:visited {
         outline: 1px solid $text-active;
         -webkit-animation: ui-field-changed 200ms ease-in-out forwards;
         animation: ui-field-changed 200ms ease-in-out forwards;
+    }
+}
+.ui-number-field[placeholder] {
+    &:after {
+        color: $text-dark;
+        background-color: $bcg-dark;
     }
 }
 
