--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -264,6 +264,7 @@ a:visited {
     font-size: 11px;
     font-family: 'Lucida Grande';
     border: 1px solid #1a1a1a;
+    transition: opacity 100ms;
 
     &.disabled {
         opacity: .5;
@@ -276,6 +277,7 @@ a:visited {
     height: 24px;
     line-height: 24px;
     border-bottom: 1px solid #1a1a1a;
+    transition: opacity 100ms;
 
     &:last-child {
         border-bottom: none;
@@ -325,6 +327,7 @@ a:visited {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    transition: opacity 100ms;
 
     &.disabled {
         cursor: default;
@@ -522,6 +525,7 @@ a:visited {
         > .text {
             position: relative;
             z-index: 1;
+            transition: opacity 100ms;
         }
     }
     &.selected {
@@ -589,6 +593,7 @@ a:visited {
     line-height: 24px;
     margin: 4px;
     vertical-align: bottom;
+    transition: opacity 100ms;
 
     &.disabled {
         opacity: .5;
@@ -629,6 +634,7 @@ a:visited {
     margin: 4px;
     background-color: #000;
     vertical-align: top;
+    transition: opacity 100ms;
 
     &.disabled {
         opacity: .5;
@@ -684,6 +690,7 @@ a:visited {
     margin: 4px;
     background-color: #000;
     vertical-align: top;
+    transition: opacity 100ms;
 
     &.disabled {
         opacity: .5;
@@ -741,6 +748,7 @@ a:visited {
     line-height: 24px;
     font-size: 14px;
     cursor: pointer;
+    transition: opacity 100ms;
 
     &.disabled {
         opacity: .5;
@@ -757,6 +765,7 @@ a:visited {
     width: 24px;
     height: 24px;
     cursor: pointer;
+    transition: opacity 100ms;
 
     &.checked {
         background-color: #fff;
@@ -778,6 +787,7 @@ a:visited {
     padding: 0 8px;
     font-size: 12px;
     cursor: pointer;
+    transition: opacity 100ms;
 
     &:after {
         content: '\00a0';
@@ -857,6 +867,7 @@ a:visited {
     color: #f8f4f0;
     background-color: #1d292c;
     overflow: auto;
+    transition: opacity 100ms;
 
     &.disabled {
         opacity: .5;
@@ -868,6 +879,7 @@ a:visited {
     width: 128px;
     height: 4px;
     background-color: #000;
+    transition: opacity 100ms;
 
     &.disabled {
         opacity: .5;
