--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -58,6 +58,11 @@ a:visited {
         color: $text-dark;
     }
     &.foldable {
+        &.folded {
+            &.horizontal {
+                background-color: $bcg-dark;
+            }
+        }
         > header {
             &:hover {
                 color: $text-active;
@@ -232,6 +237,32 @@ a:visited {
     &:after {
         color: $text-dark;
         background-color: $bcg-dark;
+    }
+}
+
+.ui-color-field {
+    border: 1px solid $bcg-darker;
+    background-color: $bcg-dark;
+
+    > .icon {
+        background-color: $bcg-dark;
+        border-color: $bcg-darker;
+    }
+
+    &:hover,
+    &:focus {
+        border-color: $bcg-darker;
+        box-shadow: 0 0 4px rgba(0, 0, 0, .5);
+        > .icon {
+            background-color: $text-active;
+            border-color: $bcg-darker;
+        }
+    }
+
+    &.changed {
+        outline: 1px solid $text-active;
+        -webkit-animation: ui-field-changed 200ms ease-in-out forwards;
+        animation: ui-field-changed 200ms ease-in-out forwards;
     }
 }
 
