--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -271,6 +271,20 @@ a:visited {
         opacity: 0;
         visibility: hidden;
     }
+    &.center {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -64px;
+        margin-top: -64px;
+        width: 128px;
+        height: 128px;
+    }
+    &.transparent {
+        > .overlay {
+            opacity: 0;
+        }
+    }
     > .overlay {
         position: absolute;
         width: auto;
@@ -283,14 +297,9 @@ a:visited {
         cursor: pointer;
     }
     > .content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-left: -64px;
-        margin-top: -64px;
-        width: 128px;
-        height: 128px;
+        position: relative;
         background-color: #07f;
+        box-shadow: 0 0 16px #000;
         transition: width 100ms, height 100ms, margin-left 100ms, margin-top 100ms;
     }
 }
@@ -789,7 +798,6 @@ a:visited {
     cursor: pointer;
     transition: opacity 100ms;
 
-    background-color: #000;
     background-image:
           -moz-linear-gradient(45deg, #000 25%, transparent 25%),
           -moz-linear-gradient(-45deg, #000 25%, transparent 25%),
@@ -800,6 +808,7 @@ a:visited {
       -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, #000), color-stop(.25, transparent)),
       -webkit-gradient(linear, 0 100%, 100% 0, color-stop(.75, transparent), color-stop(.75, #000)),
       -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.75, transparent), color-stop(.75, #000));
+    background-color: #fff;
 
     background-size: 8px 8px;
     -moz-background-size: 8px 8px;
