--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -112,8 +112,9 @@ body {
             > .content {
                 > .ui-label:nth-child(2) {
                     padding: 0 8px;
+                    font-family: "Lucida Console", Monaco, monospace;
+                    font-weight: normal;
                     font-size: 11px;
-                    font-family: 'Lucida Grande';
                     border: 1px solid #293538;
                     background-color: #293538;
                     // color: #eee;
@@ -217,7 +218,7 @@ body {
     }
     &.c-2 > .content {
         > .fields > .field-hex {
-            // display: block;
+            display: block;
         }
     }
     &.c-3 > .content {
