--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -9,6 +9,8 @@ $text-primary: #eee;
 $text-light: #fff;
 $text-active: #6bc26f;
 
+$disabled-opacity: .4;
+
 body {
     color: $text-primary;
     background-color: $bcg-dark;
@@ -56,7 +58,7 @@ a:visited {
 
     &.disabled {
         > header {
-            background-color: mix($bcg-primary, $bcg-dark, 50%);
+            background-color: mix($bcg-primary, $bcg-dark, $disabled-opacity);
         }
     }
     > header {
